--- a/views/favorite.html
+++ b/views/favorite.html
@@ -1,3 +1,5 @@
 <h1>All Favorite Movies</h1>
 
-{{test}}
+<div class="well" ng-repeat="favorite in favorites">
+	<h3>Title: {{favorite.Title}}</h3>
+</div>
