--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,6 @@
 		<p class="col-xs-3 col-sm-3 col-md-3 col-lg-3">Year: {{movie.Year}}</p>
 		<p class="col-xs-3 col-sm-3 col-md-3 col-lg-3">imdbID: {{movie.imdbID}}</p>
 		
-		<a href="#!/favorite" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 btn btn-info" ng-click="addToFavorite()">Add To Favorite</a>
+		<a href="#!/favorite/" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 btn btn-info" ng-click="addToFavorite(movie)">Add To Favorite</a>
 	</div>
 </div>
